--- a/AdventOfCode2024.Tests/AdventOfCode2024.Tests.fsproj
+++ b/AdventOfCode2024.Tests/AdventOfCode2024.Tests.fsproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Day1.fs" />
+        <Compile Include="Day1Should.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
 
@@ -18,6 +18,10 @@
         <PackageReference Include="NUnit" Version="4.2.2"/>
         <PackageReference Include="NUnit.Analyzers" Version="4.3.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AdventOfCode2024\AdventOfCode2024.fsproj" />
     </ItemGroup>
 
 </Project>
