Day2 calculate report safety

--- a/AdventOfCode2024/AdventOfCode2024.fsproj
+++ b/AdventOfCode2024/AdventOfCode2024.fsproj
@@ -12,6 +12,7 @@
         <Content Include="Day1\input.txt">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
+        <Compile Include="Day2\Day2.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
