--- a/AdventOfCode2024.Tests/AdventOfCode2024.Tests.fsproj
+++ b/AdventOfCode2024.Tests/AdventOfCode2024.Tests.fsproj
@@ -9,7 +9,8 @@
 
     <ItemGroup>
         <Compile Include="Day1Should.fs" />
-        <Compile Include="Program.fs"/>
+        <Compile Include="Day2Should.fs" />
+        <Compile Include="Program.fs" />
     </ItemGroup>
 
     <ItemGroup>
