--- a/AdventOfCode2024/AdventOfCode2024.fsproj
+++ b/AdventOfCode2024/AdventOfCode2024.fsproj
@@ -13,6 +13,9 @@
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
         <Compile Include="Day2\Day2.fs" />
+        <Content Include="Day2\input.txt">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
         <Compile Include="Program.fs" />
     </ItemGroup>
 
