Day11 Part1 int64 refactor

--- a/AdventOfCode2024/AdventOfCode2024.fsproj
+++ b/AdventOfCode2024/AdventOfCode2024.fsproj
@@ -17,6 +17,9 @@
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
         <Compile Include="Day11\Day11.fs" />
+        <Content Include="Day11\input.txt">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
         <Compile Include="Program.fs" />
     </ItemGroup>
 
